fix: handle empty search results in client search functionality